# DynamicArmorVariants

./: .clang-format  .editorconfig  .gitattributes  .gitmodules  Build.cmd  CMakeLists.txt  README.md  install_files.cmake  vcpkg.json
data/: DAV_HiddenEquipment.esp  DynamicArmorMenu.esp
data/Interface/Translations/: DAV_HiddenEquipment_ENGLISH.txt  DynamicArmorMenu_ENGLISH.txt
data/MCM/Config/DynamicArmorMenu/: config.json  keybinds.json
data/MCM/Settings/: DynamicArmorMenu.ini
data/SKSE/Plugins/DynamicArmorVariants/: DAV_HiddenEquipment.json
data/fomod/: ModuleConfig.xml  info.xml
docs/: DynamicArmorVariants.schema.json
docs/examples/: DAV_HiddenEquipment.json  DynamicLoweredHoods.json  LoweredHoods.json
scripts/: DynamicArmor.psc  DynamicArmor_MCM.psc  DynamicArmor_Menu.psc  DynamicArmor_MenuPower.psc
src/Ext/: Actor.cpp  Actor.h  IItemChangeVisitor.h  InventoryChanges.cpp  InventoryChanges.h  TESObjectARMA.cpp  TESObjectARMA.h
src/PCH/: PCH.h
src/Papyrus/: DynamicArmor.cpp  DynamicArmor.h  Papyrus.h
src/RE/: Offset.Ext.h  TESActorLocationChangeEvent.h  TESFormDeleteEvent.h
src/main/: ArmorVariant.cpp  ArmorVariant.h  ConditionParser.cpp  ConditionParser.h  ConfigLoader.cpp  ConfigLoader.h  DynamicArmorManager.Serialization.cpp  DynamicArmorManager.cpp  DynamicArmorManager.h  EnumLookup.h  FormUtil.h  GetWornMaskVisitor.cpp  GetWornMaskVisitor.h  Hooks.cpp  Hooks.h  IItemChangeVisitor.h  Json.h  Patches.cpp  Patches.h  SKSEPlugin.cpp  Serialization.cpp  Serialization.h  WornFormUpdater.cpp  WornFormUpdater.h
